Allow custom app title in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Anguilla App</title>
+    <title><%= APP_TITLE %></title>
 
     <meta
       name="viewport"
