--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Anguilla App" />
+    <meta name="apple-mobile-web-app-title" content="<%= APP_TITLE %>" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
   <body>
